jitsi/020-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: jicofo
    app.kubernetes.io/part-of: jitsi
  name: jicofo
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jicofo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jicofo
    spec:
      containers:
        - name: jicofo
          image: jitsi/jicofo:stable-8922-1
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: prosody
    app.kubernetes.io/part-of: jitsi
  name: prosody
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prosody
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prosody
    spec:
      containers:
        - name: prosody
          image: jitsi/prosody:stable-8922-1
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: jitsi
  name: web
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
    spec:
      containers:
        - name: web
          image: jitsi/web:stable-8922-1
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: jvb
    app.kubernetes.io/part-of: jitsi
  name: jvb
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jvb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jvb
    spec:
      containers:
        - name: jvb
          image: jitsi/jvb:stable-8922-1
          imagePullPolicy: IfNotPresent
      serviceAccountName: jitsi
---
