jitsi/010-jvb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvb
  name: jvb
  namespace: jitsi
spec:
  type: ClusterIP
  ports:
  - port: 30300
    protocol: UDP
    targetPort: 30300
    name: ice
  - port: 9090
    targetPort: 9090
    name: http
  selector:
    app.kubernetes.io/name: jvb
