jitsi/040-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.kubernetes.io/hostname: meet.hashbang.sh
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - meet.hashbang.sh
    secretName: meet-tls
  rules:
  - host: meet.hashbang.sh
    http:
      paths:
      - backend:
          service:
            name: jvb
            port:
              number: 30300
        path: /colibri-ws
        pathType: Prefix
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: Prefix
